--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # dependencies
-node_modules
+node_modules 
+
 
 # logs
 npm-debug.log
-
 # Nuxt build
 .nuxt
 
+
 # Nuxt generate
 dist
+
+# package-lock.json
