--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0"
+  },
+  "engines": {
+    "node": "9.2.0"
   }
 }
