--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "heroku-postbuild": "npm run build"
+    "start": "nuxt start"
   },
   "dependencies": {
     "node-sass": "^4.9.4",
@@ -23,6 +22,7 @@
     "eslint-plugin-vue": "^4.0.0"
   },
   "engines": {
-    "node": "9.2.0"
+    "node": "9.2.0",
+    "npm": "5.5.1"
   }
 }
