--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "firebase": "^5.5.6",
     "node-sass": "^4.9.4",
     "nuxt": "^2.0.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vuefire": "^2.0.0-alpha.15"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
